--- a/emBODY/eBcode/arch-dspic/board/2foc/appl/2FOC-V3/2FOC-V3.X/nbproject/Makefile-genesis.properties
+++ b/emBODY/eBcode/arch-dspic/board/2foc/appl/2FOC-V3/2FOC-V3.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,12 @@
 #
-#Wed Feb 14 13:09:55 CET 2018
-default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=9c07fbdde91a46270dda81e03dd9f4d4
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.20\\bin
-configurations-xml=8b218a5209bc1a57db149a69a72022b2
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=5d30ff5128b14865c8a3796a8f0bb8a0
-default.languagetoolchain.version=1.20
-host.platform=windows
+#Mon Feb 08 12:51:50 CET 2021
+default.languagetoolchain.version=1.60
+default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v5.45\\packs\\Microchip\\dsPIC33F-GP-MC_DFP\\1.3.64
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=300f2067f499e9e7c7fedace3cbebf24
 conf.ids=default
+default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc16\\v1.60\\bin
+host.id=239f-pgo2-fn
+configurations-xml=31efa9c0038925c891cd6e4c992227f9
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=4e1c703e057ce3824a620f2a747a6f88
+proj.dir=C\:\\Users\\ascalzo\\Documents\\IIT\\Projects-GIT\\icub-firmware\\emBODY\\eBcode\\arch-dspic\\board\\2foc\\appl\\2FOC-V3\\2FOC-V3.X
+host.platform=windows
