--- a/emBODY/eBcode/arch-arm/board/amcbldc/application02/proj/amcbldc-application02.uvprojx
+++ b/emBODY/eBcode/arch-arm/board/amcbldc/application02/proj/amcbldc-application02.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls>-Wno-pragma-pack -Wno-deprecated-register -DEMBOT_USE_rtos_osal</MiscControls>
               <Define>USE_STM32HAL STM32HAL_BOARD_AMCBLDC STM32HAL_DRIVER_V120</Define>
               <Undefine></Undefine>
-              <IncludePath>..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\api;..\..\..\..\..\..\eBcode\arch-arm\libs\midware\eventviewer\api;..\..\..\..\..\..\eBcode\arch-arm\libs\lowlevel\stm32hal\api;..\..\..\..\..\..\..\..\icub-firmware-shared\embot\core;..\..\..\..\..\..\eBcode\arch-arm\embot\app;..\..\..\..\..\..\eBcode\arch-arm\embot\i2h;..\..\..\..\..\..\eBcode\arch-arm\embot\hw;..\..\..\..\..\..\eBcode\arch-arm\embot\os;..\..\..\..\..\..\eBcode\arch-arm\embot;..\..\..\..\..\..\..\..\icub-firmware-shared\embot\core;..\..\..\..\embot\app\dsp;..\..\..\..\..\..\..\..\icub-firmware-shared\can\canProtocolLib;..\..\..\..\embot\app\skeleton;..\..\..\..\embot\prot\can;..\..\bsp;..\src\FOCode\BLDC_FOC_Code\Current_FOC_ert_rtw;..\..\..\..\libs\lowlevel\cmsis\dsp\v160\Include;..\src\motorhal;..\src\control-foc\_sharedutils;..\..\..\..\..\..\eBcode\arch-arm\board\amcbldc\application02\src\control-foc\_sharedutils</IncludePath>
+              <IncludePath>..\..\..\..\..\..\eBcode\arch-arm\libs\highlevel\abslayer\osal\api;..\..\..\..\..\..\eBcode\arch-arm\libs\midware\eventviewer\api;..\..\..\..\..\..\eBcode\arch-arm\libs\lowlevel\stm32hal\api;..\..\..\..\..\..\..\..\icub-firmware-shared\embot\core;..\..\..\..\..\..\eBcode\arch-arm\embot\app;..\..\..\..\..\..\eBcode\arch-arm\embot\i2h;..\..\..\..\..\..\eBcode\arch-arm\embot\hw;..\..\..\..\..\..\eBcode\arch-arm\embot\os;..\..\..\..\..\..\eBcode\arch-arm\embot;..\..\..\..\..\..\..\..\icub-firmware-shared\embot\core;..\..\..\..\embot\app\dsp;..\..\..\..\..\..\..\..\icub-firmware-shared\can\canProtocolLib;..\..\..\..\embot\app\skeleton;..\..\..\..\embot\prot\can;..\..\bsp;..\src\FOCode\BLDC_FOC_Code\Current_FOC_ert_rtw;..\..\..\..\libs\lowlevel\cmsis\dsp\v160\Include;..\src\motorhal;..\src\control-foc\_sharedutils;..\..\..\..\..\..\eBcode\arch-arm\board\amcbldc\application02\src\control-foc\_sharedutils;..\..\..\..\..\..\eBcode\arch-arm\board\amcbldc\application02\src\control-foc\control_foc;..\..\..\..\..\..\eBcode\arch-arm\board\amcbldc\application02\src\control-foc\control_outer</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -969,6 +969,11 @@
               <FileName>uMultiWordShl.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\src\control-foc\_sharedutils\uMultiWordShl.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>control_outer.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\src\control-foc\control_outer\control_outer.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -1908,6 +1913,11 @@
               <FileType>8</FileType>
               <FilePath>..\src\control-foc\_sharedutils\uMultiWordShl.cpp</FilePath>
             </File>
+            <File>
+              <FileName>control_outer.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\src\control-foc\control_outer\control_outer.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2845,6 +2855,11 @@
               <FileName>uMultiWordShl.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\src\control-foc\_sharedutils\uMultiWordShl.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>control_outer.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\src\control-foc\control_outer\control_outer.cpp</FilePath>
             </File>
           </Files>
         </Group>
